infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Config options of the object to create
  name: client-depl # Name of the entity to create
spec: # Attributes of the object to create
  replicas: 1 # Number of pods we want to create running a particular image
  selector: # Find all the pods with a label of app: client
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec: # Config of the pod we are creating
      containers:
        - name: client
          image: jjaramillom/client:latest
          imagePullPolicy: Never
---
# Create a new object
apiVersion: v1
kind: Service
metadata: # Config options of the object to create
  name: client-srv # Name of the entity to create
spec: # Attributes of the object to create
  type: ClusterIP
  selector: # Find all the pods with a label of app: client (to expose)
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # Node port to expose
      targetPort: 3000 # Pod port to access within the Node |(exposed by the container)
