infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Config options of the object to create
  name: event-bus-depl # Name of the entity to create
spec: # Attributes of the object to create
  replicas: 1 # Number of pods we want to create running a particular image
  selector: # Find all the pods with a label of app: event-bus
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec: # Config of the pod we are creating
      containers:
        - name: event-bus
          image: jjaramillom/event-bus:latest
          imagePullPolicy: Never
---
# Create a new object
apiVersion: v1
kind: Service
metadata: # Config options of the object to create
  name: event-bus-srv # Name of the entity to create
spec: # Attributes of the object to create
  type: ClusterIP
  selector: # Find all the pods with a label of app: event-bus (to expose)
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Node port to expose
      targetPort: 4005 # Pod port to access within the Node |(exposed by the container)
