infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata: # Config options of the object to create
  name: posts-srv # Name of the entity to create
spec: # Attributes of the object to create
  type: NodePort
  selector: # Find all the pods with a label of app: posts (to expose)
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000 # Node port to expose 
    targetPort: 4000 # Pod port to access within the Node |(exposed by the container)
