infra/k8s/query-serv.yaml
apiVersion: v1
kind: Service
metadata: # Config options of the object to create
  name: query-srv # Name of the entity to create
spec: # Attributes of the object to create
  type: NodePort
  selector: # Find all the pods with a label of app: query (to expose)
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002 # Node port to expose 
    targetPort: 4002 # Pod port to access within the Node |(exposed by the container)
