infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: # Config options of the object to create
  name: ingress-srv # Name of the entity to create
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /post/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /post
            backend:
              serviceName: query-clusterip-srv
              servicePort: 4002
          - path: /post/?(.*)/comment #reg exp
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 3000
